--- a/src/main/resources/public/store.html
+++ b/src/main/resources/public/store.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="container"></div>
+    <script type="text/babel" src="scripts/error.jsx"></script>
     <script type="text/babel" src="scripts/product-table.jsx"></script>
     <script type="text/babel" src="scripts/shopping-cart.jsx"></script>
     <script type="text/babel" src="scripts/summary.jsx"></script>
