Add input check. Extract shopping.jsx from store.jsx Add JSON Rest Service to get inventory.

--- a/src/main/resources/public/store.html
+++ b/src/main/resources/public/store.html
@@ -9,10 +9,12 @@
   </head>
   <body>
     <div id="container"></div>
+    <script src="scripts/util.js"></script>
     <script type="text/babel" src="scripts/error.jsx"></script>
     <script type="text/babel" src="scripts/product-table.jsx"></script>
     <script type="text/babel" src="scripts/shopping-cart.jsx"></script>
     <script type="text/babel" src="scripts/summary.jsx"></script>
+    <script type="text/babel" src="scripts/shopping.jsx"></script>
     <script type="text/babel" src="scripts/store.jsx"></script>
     <script src="https://unpkg.com/react@15.3.0/dist/react.js"></script>
     <script src="https://unpkg.com/react-dom@15.3.0/dist/react-dom.js"></script>
