--- a/src/main/resources/public/store.html
+++ b/src/main/resources/public/store.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>React Tutorial</title>
-    <!-- Not present in the tutorial. Just for basic styling. -->
+    <title>Alan's Magic Store</title>
     <link rel="stylesheet" href="css/base.css" />
 
   </head>
